@@ -533,7 +533,7 @@ our %Lexicon = (
   'Media "[_1]" check out canceled.' => 'Checkout des Mediums "[_1]" abgebrochen.',
   'Media "[_1]" created and saved.' => 'Medium "[_1]" erzeugt und gespeichert.',
   'Media "[_1]" deleted.' => 'Medium "[_1]" gelöscht.',
-  'Media "[_1]" published.' => 'Medium "[_1]" veröffentlicht.',
+  'Media "[_1]" published to [_2].' => 'Medium "[_1]" veröffentlicht auf [_2].',
   'Media "[_1]" reverted to V.[_2]' => 'Medium "[_1]" auf Version "[_2]" zurückgefallen',
   'Media "[_1]" saved and checked in to "[_2]".' => 'Medium "[_1]" gespeichert und nach "[_2]" eingecheckt.',
   'Media "[_1]" saved and moved to "[_2]".' => 'Medium "[_1]" gespeichert und nach "[_2]" verschoben.',
@@ -632,7 +632,7 @@ our %Lexicon = (
   'Story "[_1]" check out canceled.' => 'Checkout des Beitrags "[_1]" abgebrochen.',
   'Story "[_1]" created and saved.' => 'Beitrag "[_1]" erstellt und gesichert.',
   'Story "[_1]" deleted.' => 'Beitrag "[_1]" gelöscht.',
-  'Story "[_1]" published.' => 'Beitrag "[_1]" veröffentlicht.',
+  'Story "[_1]" published to [_2].' => 'Beitrag "[_1]" veröffentlicht auf [_2].',
   'Story "[_1]" reverted to V.[_2].' => 'Beitrag "[_1]" auf Version [_2] zurückgefallen.',
   'Story "[_1]" saved and checked in to "[_2]".' => 'Beitrag "[_1]" gesichert und nach "[_2]" eingecheckt.',
   'Story "[_1]" saved and moved to "[_2]".' => 'Beitrag "[_1]" gesichert und nach "[_2]" verschoben.',
@@ -720,8 +720,8 @@ To Translate:
   'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.' => 'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.'
   'You do not have permission to override user "[_1]"' => 'You do not have permission to override user "[_1]"',
   'Template "[_1]" deployed.' => 'Vorlage "[_1]" ausgebracht',
-  'Story "[_1]" scheduled for publication.' => 'Beitrag "[_1]" veröffentlicht.',
-  'Media "[_1]" scheduled for publication.' => 'Medium "[_1]" veröffentlicht.',
+  'Story "[_1]" scheduled for publication to [_2].' => 'Beitrag "[_1]" veröffentlicht [_2].',
+  'Media "[_1]" scheduled for publication to [_2].' => 'Medium "[_1]" veröffentlicht [_2].',
   'Not defined.' => 'Not defined.',
   'The primary category cannot be deleted.' => 'The primary category cannot be deleted.',
   'Cannot make a dissociated category the primary category.' => 'Cannot make a dissociated category the primary category.'
